# DeepFilterNet

./: AGENTS.md  README.md
.github/workflows/: publish.yml  rust_lint.yml  test_df.yml  test_pypi_release.yml
DeepFilterNet/: pyproject.toml
DeepFilterNet/df/: __init__.py  enhance.py  io.py
demo/src/: capture.rs  main.rs
docs/: auditoria-fase1.md  compatibilidad-instalacion.md  onnx-export.md
ladspa/src/: lib.rs
libDF/: Cargo.toml
libDF/src/: dataset.rs
pyDF/: Cargo.toml  pyproject.toml
pyDF-data/: Cargo.toml  pyproject.toml
pyDF-data/src/: lib.rs
pyDF/src/: lib.rs
scripts/: bench_libdf.py
